--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   <body>
     <!-- Write your HTML code here, you can delete everything withing the body tags -->
     <div class="container">
-        <div class="card">
+        <div id="card" class="card">
           <div class="card-header"></div>
           <div class="card-content"></div>
           <div class="card-footer"></div>
